# data-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  api_tests.http  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20251016_1043_initial_migration_create_market_data.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: market_data.py
app/core/: config.py  consts.py  logging.py
app/db/: base.py  models.py  session.py
app/etl/: extractor.py  loader.py  pipeline.py  transformer.py
app/schemas/: market_data.py
app/services/: market_data_service.py
tests/: conftest.py
tests/test_api/: test_market_data.py
tests/test_etl/: test_transformer.py
